# Biblioteka

./: .gitignore  Administrator.cpp  BazaCzytelnikow.cpp  BazaKsiazek.cpp  BazaPracownikow.cpp  BazaPracownikow.h  Biblioteka.cpp  CMakeLists.txt  Data.cpp  Data.h  KontoCzytelnika.h  Ksiazka.cpp  Ksiazka.h  Pracownik.cpp  Pracownik.h  README.md  TestBazaKsiazek.cpp  Wypozyczenie.cpp  Zwrot.cpp  header.h  main.cpp
Biblioteka/: Biblioteka.sln
Biblioteka/Biblioteka/: Administrator.cpp  Administrator.h  BazaCzytelnikow.cpp  BazaCzytelnikow.h  BazaKsiazek.cpp  BazaKsiazek.h  BazaPracownikow.cpp  BazaPracownikow.h  Biblioteka.cpp  Biblioteka.vcxproj  Biblioteka.vcxproj.filters  Data.cpp  Data.h  Egzemplarz.cpp  Egzemplarz.h  KontoCzytelnika.cpp  KontoCzytelnika.h  Ksiazka.cpp  Ksiazka.h  Pracownik.cpp  Pracownik.h  Wypozyczenie.cpp  Wypozyczenie.h  Zwrot.cpp  Zwrot.h  baza_czytelnikow.txt  baza_ksiazek.txt  baza_pracownikow.txt  header.h
Biblioteka/TestBazaKsiazek/: TestBazaKsiazek.cpp
data/: baza_ksiazek.txt  baza_pracownikow.txt  books_database.json  employees_database.json  readers_database.json
include/core/: Administrator.h
include/database/: BazaCzytelnikow.h  BazaKsiazek.h  BazaPracownikow.h  BookDatabase.h  EmployeeDatabase.h  ReaderDatabase.h
include/models/: Book.h  Employee.h  KontoCzytelnika.h  Ksiazka.h  Pracownik.h  ReaderAccount.h
include/utils/: Borrowing.h  Data.h  Date.h  Logger.h  Return.h  Wypozyczenie.h  Zwrot.h
src/: main.cpp
src/core/: Administrator.cpp
src/database/: BazaCzytelnikow.cpp  BazaKsiazek.cpp  BazaPracownikow.cpp  BookDatabase.cpp  EmployeeDatabase.cpp  ReaderDatabase.cpp
src/models/: Book.cpp  Employee.cpp  KontoCzytelnika.cpp  Ksiazka.cpp  Pracownik.cpp  ReaderAccount.cpp
src/utils/: Borrowing.cpp  Data.cpp  Date.cpp  Logger.cpp  Return.cpp  Wypozyczenie.cpp  Zwrot.cpp
tests/: BookDatabaseTest.cpp  BookDatabaseTest.h  TestBazaKsiazek.cpp  TestBazaKsiazek.h
